--- a/gen_input_graph_qm9.ipynb
+++ b/gen_input_graph_qm9.ipynb
@@ -1275,9 +1275,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py38-tf",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
-   "name": "py38-tf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1289,7 +1289,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
