--- a/mpnn-daint-gpu.ipynb
+++ b/mpnn-daint-gpu.ipynb
@@ -4,21 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MPNN\n",
-    "\n",
-    "### Input preparation\n",
-    "- Search bonds : [see this](search_bonds.ipynb)\n",
-    "- Search angles : [see this](search_angles.ipynb)\n",
-    "- Generate input array : [see this](gen_input_graph.ipynb)\n",
-    "    \n",
-    "### Prepared files:\n",
-    "- Train\n",
-    "    - Nodes features\n",
-    "    - Edges features input\n",
-    "    - Edges output\n",
-    "- Test\n",
-    "    - Nodes features\n",
-    "    - Edges features input"
+    "# MPNN + GPU"
    ]
   },
   {
