--- a/mpnn.ipynb
+++ b/mpnn.ipynb
@@ -28,9 +28,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": [
-       "IPython.notebook.set_autosave_interval(60000)"
-      ]
+      "application/javascript": "IPython.notebook.set_autosave_interval(60000)"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -1087,20 +1085,13 @@
    "source": [
     "preds.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py38-mpnn",
+   "display_name": "Python 3.8.10 ('py38')",
    "language": "python",
-   "name": "py38-mpnn"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1112,7 +1103,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f2b0cf5112dfd2af73b780f4815bf58f6493434a6fee69d3bee328e26a09a438"
+   }
   }
  },
  "nbformat": 4,
