--- a/search_angles.ipynb
+++ b/search_angles.ipynb
@@ -549,7 +549,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 ('py38')",
    "language": "python",
    "name": "python3"
   },
@@ -564,6 +564,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f2b0cf5112dfd2af73b780f4815bf58f6493434a6fee69d3bee328e26a09a438"
+   }
   }
  },
  "nbformat": 4,
