--- a/search_bonds.ipynb
+++ b/search_bonds.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a685664f",
+   "metadata": {},
+   "source": [
+    "## Search bonds in molecular graph"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "7a447106-7b38-4531-aec6-55e40b1e18e6",
@@ -1005,7 +1013,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 ('py38')",
    "language": "python",
    "name": "python3"
   },
@@ -1020,6 +1028,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f2b0cf5112dfd2af73b780f4815bf58f6493434a6fee69d3bee328e26a09a438"
+   }
   }
  },
  "nbformat": 4,
