--- a/mpnn-daint-gpu.ipynb
+++ b/mpnn-daint-gpu.ipynb
@@ -612,9 +612,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py38-mpnn",
+   "display_name": "Python 3.8.10 ('py38')",
    "language": "python",
-   "name": "py38-mpnn"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -626,7 +626,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f2b0cf5112dfd2af73b780f4815bf58f6493434a6fee69d3bee328e26a09a438"
+   }
   }
  },
  "nbformat": 4,
